--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,6 +9,10 @@
     <title>testJsWithJava</title>
   </head>
   <body>
+    <div class="wrapper">
+      <div class="detail-info"></div>
+      <div class="date"></div>
+    </div>
     <form class="form" id="form">
       <div class="title">Добро пожаловать</div>
       <div class="input-container ic1">
