--- a/client/src/index.html
+++ b/client/src/index.html
@@ -9,24 +9,38 @@
     <title>testJsWithJava</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="detail-info"></div>
-      <div class="date"></div>
+    <nav class="navbar">
+      <div class="nav-container">
+        <a href="#" class="navbar-brand">Auth JsWithJava</a>
+        <div class="navbar-collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a href="/login" class="nav-link" aria-current="page">Авторизация</a>
+            </li>
+            <li class="nav-item">
+              <a href="/register" class="nav-link">Регистрация</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <div class="form-container">
+      <form class="form" id="form">
+        <div class="title">Авторизация</div>
+        <div class="input-container ic1">
+          <input id="login-input" name="login" class="input" type="text" placeholder=" " required />
+          <div class="cut"></div>
+          <label for="login-input" class="placeholder">Логин</label>
+        </div>
+        <div class="input-container ic2">
+          <input id="password-input" name="password" class="input" type="text" placeholder=" " required />
+          <div class="cut"></div>
+          <label for="password-input" class="placeholder">Пароль</label>
+        </div>
+        <button type="text" class="submit" id="submit">Отправить</button>
+        <div id="loader" class="hidden">Отправляем...</div>
+      </form>
     </div>
-    <form class="form" id="form">
-      <div class="title">Добро пожаловать</div>
-      <div class="input-container ic1">
-        <input id="login-input" name="login" class="input" type="text" placeholder=" " required />
-        <div class="cut"></div>
-        <label for="login-input" class="placeholder">Логин</label>
-      </div>
-      <div class="input-container ic2">
-        <input id="password-input" name="password" class="input" type="text" placeholder=" " required />
-        <div class="cut"></div>
-        <label for="password-input" class="placeholder">Пароль</label>
-      </div>
-      <button type="text" class="submit" id="submit">submit</button>
-      <div id="loader" class="hidden">Отправляем...</div>
-    </form>
   </body>
 </html>
