--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,11 +4,10 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link href="https://cdn.muicss.com/mui-latest/css/mui.min.css" rel="stylesheet" type="text/css" />
-        <script src="https://cdn.muicss.com/mui-latest/js/mui.min.js"></script>
-        <title>testJsWithJava</title>
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
-        <div class="app"></div>
+        <app-root></app-root>
     </body>
 </html>
